--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.24.6",
+    "axios": "^1.8.4",
     "next": "15.2.4",
+    "pnpm": "^10.8.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
