--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
-    "antd": "^5.24.6",
+    "antd": "^5.24.7",
     "axios": "^1.8.4",
+    "dompurify": "^3.2.5",
+    "highlight.js": "^11.11.1",
+    "markdown-it": "^14.1.0",
     "next": "15.2.4",
-    "pnpm": "^10.8.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "pnpm": "^10.8.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^20.17.30",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "eslint": "^9.24.0",
     "eslint-config-next": "15.2.4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
